    * an icon was missing.
    * an icon for gusts has been added.
    * an icon to open file has been added.
    * if sensor data are old (>2h), a message is displayed.

  * MODIFIED:
    * the stylesheet of few windows have been modified for better consistency with the main window.
    * the 1d forecast page with MF forecast now show data based on daily forecast.


### June 23 2022, Release version 0.12.2 ###

  * FIXED:
    * plot thread tried to compute min and max of a list even if the list is empty.
    * MQTT test thread was not handled properly since last version.
    * the dot icons were not well refreshed when the time series button is clicked.
    * MQTT threads was crashing when fields other than temperature were not available for MQTT devices.
    * the mqtt device manager tried to parse calibration methode and value even it is not handled yet. It has been fixed
    .

  * ADDED :
    * a button and a function to export database data have been introduced.


### May 5 2022, Release version 0.12.1 ###

  * MODIFIED:
    * forecast data are now automatically parse and displayed once they are received from weather API.
    * forecast buttons (1h and 1d/6h) don't trigger forecast data parsing anymore.
    * few logging messages have been added to forecast threads.
    * a new mqtt thread has been coded to replace the crashing old one.

  * FIXED:
    * a mistake has been fixed in forecast name.
    * time limits have been moved to another parts of plot thread to force computation.
    * computation of hours in plot thread have been moved to force computation.


### April 7 2022, Release version 0.12.0 ###

  * FIXED:
    * the sunlive time was wrongly computed, it has been fixed.
    * the day or night icon wasn't set properly based on sunrise and sunset.
    * an issue in the thread to check postgresql and database has been fixed.
    * fixed a keyerror with a dispatching dictionary.
    * fixed an issue with calibration in MQTT thread.